# e-commerce-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b4e3dbe3e31e_init.py
app/: main.py
app/api/: __init__.py  auth.py  cart.py  category.py  orders.py  product.py  user.py
app/core/: cache.py  config.py  dependencies.py  errors.py  lifespan.py  security.py
app/db/: redis.py  session.py  token_store.py  uow.py
app/models/: __init__.py  cart.py  category.py  mixins.py  order.py  product.py  user.py
app/repositories/: cart.py  category.py  order.py  product.py  user.py
app/schemas/: auth.py  cart.py  category.py  order.py  product.py  user.py
app/services/: auth.py  cart.py  category.py  order.py  product.py  stripe.py  user.py
app/utils/: cookies.py
